name:                antigen-hs
version:             0.1.1.0
synopsis:            A fast zsh plugin manager
description:         Please see README.md
homepage:            https://github.com/zfogg/antigen-hs#readme
license:             MIT
license-file:        LICENSE.txt
category:            Tools
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:  Antigen
  default-language: Haskell2010
  build-depends:    base      >=4.9 && <5.0
                  , directory >=1.2 && <2.0
                  , filepath  >=1.4 && <2.0
                  , process   >=1.2 && <2.0
                  , text      >=1.2 && <1.3
